# saddle-rendering-2d-lighting

./: .gitignore  Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: BJaLbpgq.js  BgDxeeqi.js  CBk2QHlE.js  CK400UzQ.js  CfzeynRv.js
_app/immutable/entry/: app.DcxmGgoH.js  start.cFGfFAYz.js
_app/immutable/nodes/: 0.DkeCOKi7.js  1.BdXHvwBP.js  (+3 more)
demo/basic/: index.html
demo/dungeon/: index.html
demo/game_demo/: index.html
demo/mask_occluder/: index.html
demo/mixed_lights/: index.html
demo/normal_maps/: index.html
demo/occluders/: index.html
demo/road_convoy/: index.html
demo/stress/: index.html
demo/texture_cursor/: index.html
demos/basic/: index.html
demos/dungeon/: index.html
demos/game_demo/: index.html
demos/mask_occluder/: index.html
demos/mixed_lights/: index.html
demos/normal_maps/: index.html
demos/occluders/: index.html
demos/road_convoy/: index.html
demos/stress/: index.html
demos/texture_cursor/: index.html
docs/: architecture.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/dungeon/: Cargo.toml
examples/dungeon/src/: main.rs
examples/game_demo/: Cargo.toml
examples/game_demo/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs
examples/mask_occluder/: Cargo.toml
examples/mask_occluder/src/: main.rs
examples/mixed_lights/: Cargo.toml
examples/mixed_lights/src/: main.rs
examples/normal_maps/: Cargo.toml
examples/normal_maps/src/: main.rs
examples/occluders/: Cargo.toml
examples/occluders/src/: main.rs
examples/road_convoy/: Cargo.toml
examples/road_convoy/src/: main.rs
examples/stress/: Cargo.toml
examples/stress/src/: main.rs
examples/texture_cursor/: Cargo.toml
examples/texture_cursor/src/: main.rs
src/: components.rs  config.rs  config_tests.rs  diagnostics.rs  geometry.rs  geometry_tests.rs  lib.rs  materials.rs  systems.rs  systems_tests.rs
src/shaders/: ambient_overlay.wgsl  light_blur.wgsl  light_composite.wgsl  light_render.wgsl  receiver_lighting.wgsl
