[workspace]
members = [
    "common",
    "basic",
    "occluders",
    "normal_maps",
    "mixed_lights",
    "dungeon",
    "texture_cursor",
    "mask_occluder",
    "road_convoy",
    "game_demo",
    "stress",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-rendering-2d-lighting = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
