[package]
name = "saddle-rendering-2d-lighting-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["dev"]
dev = ["dep:bevy_brp_extras"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18", features = ["bevy_remote", "serialize"] }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
saddle-rendering-2d-lighting = { workspace = true }
saddle-rendering-2d-lighting-example-common = { path = "../common" }

[lints]
workspace = true
